# MLopsHw1

./: .gitignore  CMakeLists.txt  Dockerfile  gauss-0.2.0-cp310-cp310-linux_aarch64.whl  gauss.cpp  pyproject.toml  test.py
