[build-system]
requires = [
    "scikit-build-core>=0.8.1",
    "pybind11>=2.10",
    "numpy>=1.24"
]
build-backend = "scikit_build_core.build"


[project]
name = "gauss"
version = "0.2.0"
description = "Гаусс-Жордан через pybind11"
authors = [
    {name = "Абдрахимов Артем", email = "sirartem001@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24"
]

[tool.scikit-build]
cmake.args = ["-DPYBIND11_FINDPYTHON=ON"]
